Implement shell step